--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,9 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features",
 	},
+	"[prisma]": {
+		"editor.defaultFormatter": "Prisma.prisma",
+	},
 
 	"editor.insertSpaces": false,
 	"editor.tabSize": 4,
