--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -1,9 +1,13 @@
 ARG DOCKER_BASE_IMAGE
+ARG DATABASE_URL=postgresql://admin:admin@db:5432/default
+
 FROM $DOCKER_BASE_IMAGE AS dev
+ARG DATABASE_URL
 
 WORKDIR /source/services/api
 
-RUN apk add dumb-init --no-cache
+RUN echo DATABASE_URL="$DATABASE_URL" >> .env && \
+	apk add dumb-init --no-cache
 
 # if stopped here, the container will start in dev mode with hot reloading
 CMD ["dumb-init", "npm", "run", "dev"]
@@ -15,6 +19,7 @@ RUN npm run build && \
 	npm run special:drop-optional-dependencies
 
 FROM node:14.17.4-alpine AS final
+ARG DATABASE_URL
 
 RUN mkdir /app
 WORKDIR /app
@@ -23,9 +28,12 @@ WORKDIR /app
 COPY --from=build /source/services/api/package*.json /app/
 RUN npm ci --production
 
-# copy dist files
+# copy files
 COPY --from=build /source/services/api/dist /app/dist
+COPY --from=build /source/services/api/prisma /app/prisma
+COPY --from=build /source/services/api/.prisma /app/.prisma
 
+ENV DATABASE_URL=$DATABASE_URL
 EXPOSE 8080
 
 CMD ["node", "/app/dist/main.js"]
