--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -8,6 +8,10 @@
 		"baseUrl": ".",
 		"outDir": "./dist",
 
+		"paths": {
+			"@prisma": [".prisma"],
+		},
+
 		"removeComments": true,
 		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
