--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,14 +4,13 @@
 	"private": "true",
 	"main": "src/index.ts",
 	"scripts": {
-		"clean": "rimraf .eslintcache",
+		"clean": "rm -rf .eslintcache",
 		"lint": "eslint src/**/*.{js,ts} --cache"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.28.5",
 		"@typescript-eslint/parser": "^4.28.5",
 		"eslint": "^7.32.0",
-		"rimraf": "^3.0.2",
 		"typescript": "^4.3.5"
 	},
 	"optionalDependencies": {
