--- a/services/web/package.json
+++ b/services/web/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "nuxt",
 		"build": "nuxt generate",
-		"clean": "rimraf .nuxt dist .eslintcache",
+		"clean": "rm -rf .nuxt dist .eslintcache",
 		"lint": "eslint src/**/*.{js,ts,vue} --cache"
 	},
 	"dependencies": {
@@ -21,8 +21,7 @@
 		"@nuxtjs/eslint-module": "^3.0.2",
 		"eslint": "^7.29.0",
 		"eslint-plugin-nuxt": "^2.0.0",
-		"eslint-plugin-vue": "^7.12.1",
-		"rimraf": "^3.0.2"
+		"eslint-plugin-vue": "^7.12.1"
 	},
 	"optionalDependencies": {
 		"@videoplatform2/lib": "^0.0.0",
