--- a/services/api/package.json
+++ b/services/api/package.json
@@ -21,6 +21,7 @@
 		"@nestjs/cli": "^8.0.0",
 		"@nestjs/schematics": "^8.0.0",
 		"@types/express": "^4.17.13",
+		"@types/faker": "^5.5.8",
 		"@types/node": "^16.0.0",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -28,13 +29,14 @@
 		"eslint": "^7.30.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
+		"faker": "^5.5.3",
 		"json": "^11.0.0",
 		"nodemon": "^2.0.7",
 		"nodemon-webpack-plugin": "^4.5.2",
 		"prettier": "^2.3.2",
 		"prisma": "^2.29.1",
 		"ts-loader": "^9.2.3",
-		"ts-node": "^10.0.0",
+		"ts-node": "^10.2.1",
 		"tsconfig-paths": "^3.10.1",
 		"typescript": "^4.3.5",
 		"webpack": "^5.48.0",
