--- a/services/proxy/haproxy.cfg
+++ b/services/proxy/haproxy.cfg
@@ -1,24 +1,24 @@
 defaults
-  timeout client 30s
-  timeout server 30s
-  timeout connect 10s
-  log global
-  log stdout format iso local0 info
+	timeout client 30s
+	timeout server 30s
+	timeout connect 10s
+	log global
+	log stdout format iso local0 info
 
 frontend gateway
-  bind *:8080
-  mode http
+	bind *:8080
+	mode http
 
-  acl api_path path_beg /api
+	acl api_path path_beg /api
 
-  use_backend api if api_path
-  default_backend web
+	use_backend api if api_path
+	default_backend web
 
 backend web
-  mode http
-  server default web:8080
+	mode http
+	server default web:8080
 
 backend api
-  mode http
-  http-request replace-path ^/api /
-  server default api:8080
+	mode http
+	http-request set-path "%[path,regsub(^/api,)]"
+	server default api:8080
