--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,8 +12,12 @@
 	"dependencies": {
 		"@nestjs/common": "^8.0.0",
 		"@nestjs/core": "^8.0.0",
+		"@nestjs/graphql": "^8.0.2",
 		"@nestjs/platform-express": "^8.0.5",
+		"@paljs/plugins": "^2.14.0",
 		"@prisma/client": "^2.29.1",
+		"apollo-server-express": "^2.25.2",
+		"graphql": "^15.5.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0"
 	},
