--- a/services/web/package.json
+++ b/services/web/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@nuxtjs/pwa": "^3.3.5",
 		"core-js": "^3.15.1",
+		"element-ui": "^2.15.5",
+		"moment": "^2.29.1",
 		"nuxt": "^2.15.7"
 	},
 	"devDependencies": {
@@ -21,7 +23,9 @@
 		"@nuxtjs/eslint-module": "^3.0.2",
 		"eslint": "^7.29.0",
 		"eslint-plugin-nuxt": "^2.0.0",
-		"eslint-plugin-vue": "^7.12.1"
+		"eslint-plugin-vue": "^7.12.1",
+		"sass": "^1.38.1",
+		"sass-loader": "^10.2.0"
 	},
 	"optionalDependencies": {
 		"@videoplatform2/lib": "^0.0.0",
