--- a/services/web/package.json
+++ b/services/web/package.json
@@ -9,14 +9,20 @@
 		"lint": "eslint src/**/*.{js,ts,vue} --cache"
 	},
 	"dependencies": {
+		"@nuxtjs/apollo": "^4.0.1-rc.5",
 		"@nuxtjs/pwa": "^3.3.5",
 		"core-js": "^3.15.1",
 		"element-ui": "^2.15.5",
+		"graphql": "^15.5.1",
 		"moment": "^2.29.1",
 		"nuxt": "^2.15.7"
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.14.7",
+		"@graphql-codegen/cli": "^2.1.1",
+		"@graphql-codegen/typescript": "^2.1.2",
+		"@graphql-codegen/typescript-graphql-files-modules": "^2.1.0",
+		"@graphql-codegen/typescript-operations": "^2.1.2",
 		"@nuxt/types": "^2.15.7",
 		"@nuxt/typescript-build": "^2.1.0",
 		"@nuxtjs/eslint-config-typescript": "^6.0.1",
@@ -25,7 +31,8 @@
 		"eslint-plugin-nuxt": "^2.0.0",
 		"eslint-plugin-vue": "^7.12.1",
 		"sass": "^1.38.1",
-		"sass-loader": "^10.2.0"
+		"sass-loader": "^10.2.0",
+		"vue-apollo": "^3.0.7"
 	},
 	"optionalDependencies": {
 		"@videoplatform2/lib": "^0.0.0",
